<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Voice</string>
    <string name="title_section1">Maps</string>
    <string name="title_section2">Voice</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="result">RESULT</string>
    <string name="click">Talk to me</string>
    <string name="title_activity_maps">Map</string>
    <string name="connectionStatus">Not Connected</string>
    <string name="disconnect">Disconnect</string>
    <string name="device">Device Name:</string>
    <string name="connectButton">Connect</string>

</resources>
